# SPARK_AIRFLOW_GENAI

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  pyproject.toml
config/: airflow.cfg  log4j.properties  spark.conf
dags/: hello_world_dag.py
data/input/: sample_sales_data.csv
scripts/: run_spark_job.sh  setup.sh  start_airflow.sh  stop_airflow.sh
spark_jobs/: __init__.py  hello_world_spark.py
tests/: __init__.py  conftest.py  test_dag.py  test_spark_job.py
